--- a/Cadre/Views/UserAccount.html
+++ b/Cadre/Views/UserAccount.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <script src="/scripts/jquery-2.1.1.min.js"></script>
 </head>
-<body onload="getUserInfo();">
+<body>
     <h1>My Account</h1>
 
     <h3 id="greetingmsg"></h3>
