- digest & reminder email capability
- eliminated javascript metis menu error

--- a/Cadre/Views/Shared/nav.html
+++ b/Cadre/Views/Shared/nav.html
@@ -39,7 +39,13 @@
                     <a href="AllUsers.html"><i class="fa fa-table fa-fw"></i> Users</a>
                 </li>
                 <li>
+                    <a href="AllPosts.html"><i class="fa fa-table fa-fw"></i> Posts</a>
+                </li>
+                <li>
                     <a href="/Views/AddPost.html"><i class="fa fa-edit fa-fw"></i> Add Post</a>
+                </li>
+                <li>
+                    <a href="/Views/SendEmails.html"><i class="fa fa-edit fa-fw"></i> Send Emails</a>
                 </li>
             </ul>
         </div>
