--- a/Cadre/Views/AllUsers.html
+++ b/Cadre/Views/AllUsers.html
@@ -26,12 +26,20 @@
                             <th>Name</th>
                             <th>Email</th>
                             <th></th>
+                            <th></th>
                         </tr>
                     </table>
-                    <div id="userDisplay"></div>
                 </div>
-                <div class="col-lg-3" id="userPostsView">
-                    <h4 class="page-header">All Posts for ..</h4>
+                <div class="col-lg-6">
+                    <h4 class="page-header" id="userPostsHeader">All Posts for ..</h4>
+                    <table class="table" id="userPostsTable">
+                        <tr>
+                            <th>Id</th>
+                            <th>Time</th>
+                            <th>Summary</th>
+                            <th>Details</th>
+                        </tr>
+                    </table>
                 </div> 
             </div>
         </div>
