--- a/Cadre/Views/Shared/nav.html
+++ b/Cadre/Views/Shared/nav.html
@@ -6,7 +6,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Cadre Email System</a>
+        <a href="index.html"><img src="/Content/logo_short.png" alt="logo" style="float: left" /></a>
+        <h2 class="navbar-brand" href="index.html" style="font-size: xx-large; margin: 15px 0px 15px 0px;">Cadre Email System</h2>
     </div>
 
     <ul class="nav navbar-top-links navbar-right">
