--- a/Cadre/Views/AllPosts.html
+++ b/Cadre/Views/AllPosts.html
@@ -1,10 +1,38 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Posts</title>
 	<meta charset="utf-8" />
-</head>
-<body>
 
+    <script src="/scripts/application.js"></script>
+    <script src="/scripts/jquery-2.1.1.min.js"></script>
+</head>
+<body onload="loadLayout(); getWeekPosts();">
+    <div id="navbar"></div>
+
+    <div id="page-wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">Posts</h1>
+                </div>
+                
+                <div class="col-xs-2">
+                    <select id="typeselect" name="posttype" class="form-control input-sm" onchange="loadPosts(this.value)">
+                        <option  selected value="Week">In The Last Week</option>
+                        <option value="Month">In The Last Month</option>
+                        <option value="All">All</option>
+                    </select>
+                    <br /><br />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <table id="postDisplayTable" class="table"></table>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
